更新型別系統文檔，詳細說明自動調整數值型別及集合型別支援，並新增內置函式與字串處理範例

--- a/語言規範.md
+++ b/語言規範.md
@@ -13,8 +13,8 @@ Glux 是一門 **簡單、高效、省記憶體、支援併發、可編譯為二
 
 #### 範例
 ```rust
-x := 10         // int，自動推導
-y := 3.14       // float，自動推導
+x := 10         // 自動推導為 int，根據數值大小選擇能容納該數值的最小型別
+y := 3.14       // 自動推導為 float，同樣選擇最小精度型別
 name := "Alice" // string
 const PI = 3.1415  // 常數
 ```
@@ -22,37 +22,58 @@ const PI = 3.1415  // 常數
 ---
 
 ### 1.2 型別系統
-- **自動調整數值型別**，避免 Go 需要手動轉換 `int64(x)`。
-- **集合型別支援異質性**，不需 `interface{}`。
-- **內建 `string()` 可轉換任何型別為字串**。
+
+- **自動調整數值型別**  
+  Glux 會根據整數或浮點數的數值範圍，自動選擇**能容納該數值的最小型別**。  
+  預設範圍如下：
+  
+  #### 整數 (int)
+  - **int8**：範圍 -128 ~ 127  
+    例：`x := 10`（若數值落在 int8 範圍內）
+  - **int16**：範圍 -32,768 ~ 32,767  
+    例：`y := 30000`（自動推導為 int16）
+  - **int32**：範圍 -2,147,483,648 ~ 2,147,483,647  
+    例：`z := 2_000_000_000`（自動推導為 int32）
+  - **int64**：範圍 -9,223,372,036,854,775,808 ~ 9,223,372,036,854,775,807  
+    若數值超出 int32 範圍，且在 int64 內則自動推導為 int64。
+  
+  #### 浮點數 (float)
+  - **float32**：32 位 IEEE 754 浮點數，精度約 7 位有效數字  
+    當數值適中且精度要求不高時，採用 float32。
+  - **float64**：64 位 IEEE 754 浮點數，精度約 15 位有效數字  
+    當數值較大或需要更高精度時，自動推導為 float64。
+  
+- **集合型別支援異質性**，不需使用類似 Go 的 `interface{}`。
+- **內建函式 `string()`** 可轉換任何型別為字串（此為內置函式之一，與 `sleep()`、`len()` 同級）。
 
 #### 範例
 ```rust
-x := 10         // int8
-y := 30000      // 自動變成 int16
-z := 2_000_000_000  // 自動變成 int32
+x := 10         // 推導為 int8 (若數值符合 int8 範圍)
+y := 30000      // 推導為 int16
+z := 2_000_000_000  // 推導為 int32
+bigNum := 10_000_000_000  // 超出 int32，自動推導為 int64
 
-data := [10, "hi", 3.14] // list<any>
-println(string(data))  // "[10, hi, 3.14]"
+pi32 := 3.14    // 推導為 float32
+largeFloat := 3.141592653589793  // 推導為 float64
 ```
 
 附上型別系統的總結表：
 
-| 分類 | 型別 | 關鍵字 |
-|------|------|------|
-| **基本型別** | 整數 | `int`（自動調整大小） |
-|  | 浮點數 | `float`（自動調整大小） |
-|  | 布林值 | `bool` |
-|  | 字串 | `string` |
-|  | 任意型別 | `any` |
-| **集合型別** | 元組 | `tuple` |
-|  | 清單 | `list` |
-|  | 陣列 | `array` |
-|  | 映射 | `map` |
-| **函式型別** | 函式 | `fn<T>` |
-| **進階型別** | 多選型別 | `union<T1, T2>` |
-|  | 指標 | `ptr<T>` |
-|  | 選用型別 | `optional<T>` |
+| 分類       | 型別       | 關鍵字/說明                                     |
+|------------|------------|------------------------------------------------|
+| **基本型別** | 整數       | `int`（自動調整至 int8、int16、int32、int64；預設使用最小型別）   |
+|            | 浮點數     | `float`（自動調整至 float32 或 float64；預設使用最小型別）         |
+|            | 布林值     | `bool`                                         |
+|            | 字串       | `string`                                       |
+|            | 任意型別   | `any`                                          |
+| **集合型別** | 元組       | `tuple`                                        |
+|            | 清單       | `list`                                         |
+|            | 陣列       | `array`                                        |
+|            | 映射       | `map`                                          |
+| **函式型別** | 函式       | `fn<T>`                                        |
+| **進階型別** | 多選型別   | `union<T1, T2>`                                |
+|            | 指標       | `ptr<T>`                                       |
+|            | 選用型別   | `optional<T>`                                  |
 
 ---
 
@@ -72,7 +93,7 @@ while x < 100 {
 }
 
 for i in range(5) {
-    println(i)  // 0, 1, 2, 3, 4
+    println(i)  // 輸出 0, 1, 2, 3, 4
 }
 
 for key, value in {"a": 1, "b": 2} {
@@ -105,10 +126,16 @@ flag2 := !x
 
 ## 3. 標準函式
 
-### 3.1 `print()` 與 `println()`
+### 3.1 內置函式
+內置函式包含常用的工具，例如：
+- **string()**：將任何型別轉換為字串，方便輸出與除錯。
+- **sleep()**：暫停執行，用於併發與計時操作。
+- **len()**：計算集合型別（如 list、array、map、tuple）或字串的長度。
+
+### 3.2 `print()` 與 `println()`
 - **`print()`**：輸出字串但不換行。
 - **`println()`**：輸出字串並自動換行。
-- **支援 `${}` 字串插值**，比 Go `fmt.Sprintf()` 更簡潔。
+- **支援 `${}` 字串插值**，比 Go 的 `fmt.Sprintf()` 更簡潔。
 - **使用 \`（反引號）支援插值**，使用 `"` 會當作純字串處理。
 
 #### 範例
@@ -116,11 +143,27 @@ flag2 := !x
 name := "Alice"
 age := 25
 print(`Hello, ${name}. You are ${age} years old.`)  // 不換行
-println(` 你的年齡是 ${age}.`)  // 換行輸出
+println(`你的年齡是 ${age}.`)  // 換行輸出
 
 nums := [1, 2, 3]
-println("List:", nums)  // 自動轉換 "[1, 2, 3]"
+println("List:", nums)  // 自動轉換為 "[1, 2, 3]"
 ```
+
+#### 3.3 字串處理
+- **字串串接**：支援使用 `+` 運算子串接多個字串。  
+  **範例：**
+  ```rust
+  greeting := "Hello, " + "World!"
+  println(greeting)  // 輸出 "Hello, World!"
+  ```
+- **多行字串**：使用反引號 `` ` `` 定義多行字串，保留換行與空白。  
+  **範例：**
+  ```rust
+  poem := `這是一首詩，
+  可以跨多行，
+  每行的空白都會被保留。`
+  println(poem)
+  ```
 
 ---
 
@@ -153,7 +196,7 @@ fn add(x: int, y: int) -> int {
     return x + y
 }
 
-println(add(2, 3))  // 5
+println(add(2, 3))  // 輸出 5
 ```
 
 ---
@@ -169,7 +212,7 @@ double := fn(x: int) -> int {
     return x * 2
 }
 
-println(double(10))  // 20
+println(double(10))  // 輸出 20
 ```
 
 **作為參數傳遞**
@@ -180,7 +223,7 @@ fn apply_twice(f: fn(int) -> int, x: int) -> int {
 
 println(apply_twice(fn(x: int) -> int {
     return x + 3
-}, 5))  // (5+3) + 3 = 11
+}, 5))  // 輸出 11 ((5+3)+3)
 ```
 
 ---
@@ -200,8 +243,8 @@ fn make_multiplier(factor: int) -> fn(int) -> int {
 double := make_multiplier(2)
 triple := make_multiplier(3)
 
-println(double(5))  // 10
-println(triple(5))  // 15
+println(double(5))  // 輸出 10
+println(triple(5))  // 輸出 15
 ```
 
 ---
@@ -224,14 +267,14 @@ fn choose_operation(op: string) -> fn(int, int) -> int {
 }
 
 op := choose_operation("add")
-println(op(3, 5))  // 8
+println(op(3, 5))  // 輸出 8
 ```
 
 ---
 
 ### 5.5 變數捕獲（Capturing）
 - **閉包可讀取與修改外部變數**。
-- **如果閉包在函式返回後仍存活，則變數會存於堆區（Heap）**。
+- **若閉包在函式返回後仍存活，則變數將存於堆區（Heap）**。
 
 #### 範例
 ```rust
@@ -244,8 +287,8 @@ fn counter() -> fn() -> int {
 }
 
 next := counter()
-println(next())  // 1
-println(next())  // 2
+println(next())  // 輸出 1
+println(next())  // 輸出 2
 ```
 
 ---
@@ -265,7 +308,7 @@ fn map(lst: list<int>, f: fn(int) -> int) -> list<int> {
 
 println(map([1, 2, 3, 4], fn(x: int) -> int {
     return x * x
-}))  // [1, 4, 9, 16]
+}))  // 輸出 [1, 4, 9, 16]
 ```
 
 ---
@@ -289,7 +332,7 @@ spawn fn work2() {
     println("工作 2 結束")
 }
 
-await work1(), work2()  // 等待最慢的完成
+await work1(), work2()  // 等待最慢的任務完成
 println("所有工作結束")
 ```
 
@@ -307,7 +350,7 @@ spawn fn get_data() -> int {
 }
 
 result := await get_data()
-println(`結果: ${result}`)  // "結果: 42"
+println(`結果: ${result}`)  // 輸出 "結果: 42"
 ```
 
 ---
@@ -328,15 +371,15 @@ spawn fn task2() -> string {
 }
 
 results := await task1(), task2()
-println(`結果: ${results}`)  // "結果: ("A", "B")"
+println(`結果: ${results}`)  // 輸出 "結果: ("A", "B")"
 ```
 
 ---
 
 ### 7.3 `await` 內建錯誤處理
-若 `await` 內的某個函式發生錯誤：
-- **預設行為**：回傳 `error<T>` 類型（類似 Rust `Result<T, E>`）。
-- **可選行為**：使用 `try` 來捕獲錯誤。
+若 `await` 中的某個函式發生錯誤：
+- **預設行為**：回傳 `error<T>` 類型（類似 Rust 的 `Result<T, E>`）。
+- **可選行為**：可使用 `try` 捕獲錯誤。
 
 #### 範例
 ```rust
@@ -356,7 +399,7 @@ if result is error {
 ---
 
 ### 7.4 `await` 用於迴圈
-當有 **多個併發函式** 需要逐一處理時，可用 `for` 迭代 `await` 結果：
+當有 **多個併發函式** 需要逐一處理時，可使用 `for` 迭代 `await` 結果：
 
 #### 範例
 ```rust
@@ -368,6 +411,4 @@ for result in await tasks {
 ```
 **行為解析**：
 - `await tasks` 會 **同時等待所有函式** 執行完畢。
-- `for result in await tasks` **逐一處理結果**。
-
----
+- `for result in await tasks` **逐一處理每個結果**。
