更新 Glux 語言設計規範，新增內置函式 copy()、參數傳遞語意及 struct 與 interface 的詳細說明

--- a/語言規範.md
+++ b/語言規範.md
@@ -1,3 +1,7 @@
+以下是更新後的 Glux 語言設計規範，已新增內置函式 copy()（進行深拷貝）、參數傳遞語意，以及 struct 與 interface 的說明。
+
+---
+
 # Glux 語言設計規範
 
 Glux 是一門 **簡單、高效、省記憶體、支援併發、可編譯為二進制** 的靜態類型語言，擁有直覺的語法，結合了 Python、Go、Rust 的優勢。
@@ -35,13 +39,13 @@ const PI = 3.1415  // 常數
   - **int32**：範圍 -2,147,483,648 ~ 2,147,483,647  
     例：`z := 2_000_000_000`（自動推導為 int32）
   - **int64**：範圍 -9,223,372,036,854,775,808 ~ 9,223,372,036,854,775,807  
-    若數值超出 int32 範圍，且在 int64 內則自動推導為 int64。
+    若數值超出 int32 範圍，且在 int64 內則自動推導為 int64.
   
   #### 浮點數 (float)
   - **float32**：32 位 IEEE 754 浮點數，精度約 7 位有效數字  
     當數值適中且精度要求不高時，採用 float32。
   - **float64**：64 位 IEEE 754 浮點數，精度約 15 位有效數字  
-    當數值較大或需要更高精度時，自動推導為 float64。
+    當數值較大或需要更高精度時，自動推導為 float64.
   
 - **集合型別支援異質性**，不需使用類似 Go 的 `interface{}`。
 - **內建函式 `string()`** 可轉換任何型別為字串（此為內置函式之一，與 `sleep()`、`len()` 同級）。
@@ -131,6 +135,8 @@ flag2 := !x
 - **string()**：將任何型別轉換為字串，方便輸出與除錯。
 - **sleep()**：暫停執行，用於併發與計時操作。
 - **len()**：計算集合型別（如 list、array、map、tuple）或字串的長度。
+- **copy()**：提供一個內置函式，用於對集合型別、結構體或其他複合型別進行深拷貝。  
+  深拷貝後，返回一個與原物件不共享記憶體的新物件。
 
 ### 3.2 `print()` 與 `println()`
 - **`print()`**：輸出字串但不換行。
@@ -169,13 +175,13 @@ println("List:", nums)  // 自動轉換為 "[1, 2, 3]"
 
 ## 4. 可見性
 
-✅ **首字母大寫公開，小寫私有**（與 Go 相同，避免 `public` / `private` 關鍵字）
+✅ **首字母大寫公開，小寫私有**（與 Go 相同，避免使用 `public` / `private` 關鍵字）
 
 #### 範例
 ```rust
 struct User {
-    Name: string  // 公開
-    age: int      // 私有
+    Name: string,  // 公開
+    age: int,      // 私有
 }
 ```
 
@@ -412,3 +418,56 @@ for result in await tasks {
 **行為解析**：
 - `await tasks` 會 **同時等待所有函式** 執行完畢。
 - `for result in await tasks` **逐一處理每個結果**。
+
+---
+
+## 8. 參數傳遞語意
+
+- **值傳遞**：對於基本型別（如 int、float、bool），預設採用值傳遞。這些型別佔用記憶體小，複製成本低。
+- **引用傳遞**：對於複合型別（如 string、list、array、map、tuple、struct 等），預設採用引用傳遞，以節省記憶體與提高效能。在函式呼叫中，傳遞的是物件的引用，而非整個複製品。
+- 若有需要，也可透過顯式語法指定使用值傳遞或引用傳遞，以滿足特殊需求。
+
+---
+
+## 9. 結構體與介面
+
+### 9.1 Struct 結構體
+- 使用 `struct` 關鍵字宣告結構體。  
+- 結構體成員中，首字母大寫表示公開，首字母小寫表示私有，與 Go 的規範相同。
+
+#### 範例
+```rust
+struct User {
+    Name: string,  // 公開
+    age: int,      // 私有
+}
+```
+
+### 9.2 Interface 介面
+- 使用 `interface` 關鍵字宣告介面，定義一組方法簽名。  
+- 任何型別只要實作了這些方法，即隱式實作該介面，無需額外聲明。
+
+#### 範例
+```rust
+interface Reader {
+    read() -> string
+}
+
+struct FileReader {
+    fileName: string,
+}
+
+fn (fr FileReader) read() -> string {
+    // 實作讀取檔案的邏輯
+    return "檔案內容"
+}
+
+fn printReader(r Reader) {
+    println(r.read())
+}
+
+fileReader := FileReader{"data.txt"}
+printReader(fileReader)  // 輸出 "檔案內容"
+```
+
+---
