更新 Glux 語言設計規範，精簡文檔內容並新增函式回傳型別與多值回傳的說明

--- a/語言規範.md
+++ b/語言規範.md
@@ -1,7 +1,3 @@
-以下是更新後的 Glux 語言設計規範，已新增內置函式 copy()（進行深拷貝）、參數傳遞語意，以及 struct 與 interface 的說明。
-
----
-
 # Glux 語言設計規範
 
 Glux 是一門 **簡單、高效、省記憶體、支援併發、可編譯為二進制** 的靜態類型語言，擁有直覺的語法，結合了 Python、Go、Rust 的優勢。
@@ -43,12 +39,14 @@ const PI = 3.1415  // 常數
   
   #### 浮點數 (float)
   - **float32**：32 位 IEEE 754 浮點數，精度約 7 位有效數字  
-    當數值適中且精度要求不高時，採用 float32。
+    當數值適中且精度要求不高時，採用 float32.
   - **float64**：64 位 IEEE 754 浮點數，精度約 15 位有效數字  
     當數值較大或需要更高精度時，自動推導為 float64.
   
-- **集合型別支援異質性**，不需使用類似 Go 的 `interface{}`。
-- **內建函式 `string()`** 可轉換任何型別為字串（此為內置函式之一，與 `sleep()`、`len()` 同級）。
+- **集合型別支援異質性**  
+  集合型別（如 tuple、list、array、map）不需要指定內部元素型別，允許同時存放不同型別的值。
+- **內建函式 `string()`**  
+  可轉換任何型別為字串（此為內置函式之一，與 `sleep()`、`len()` 同級）。
 
 #### 範例
 ```rust
@@ -59,25 +57,27 @@ bigNum := 10_000_000_000  // 超出 int32，自動推導為 int64
 
 pi32 := 3.14    // 推導為 float32
 largeFloat := 3.141592653589793  // 推導為 float64
+
+mixedList := [10, "hello", 3.14]  // list 可包含不同型別
 ```
 
 附上型別系統的總結表：
 
-| 分類       | 型別       | 關鍵字/說明                                     |
-|------------|------------|------------------------------------------------|
+| 分類       | 型別       | 說明                                     |
+|------------|------------|------------------------------------------|
 | **基本型別** | 整數       | `int`（自動調整至 int8、int16、int32、int64；預設使用最小型別）   |
 |            | 浮點數     | `float`（自動調整至 float32 或 float64；預設使用最小型別）         |
-|            | 布林值     | `bool`                                         |
-|            | 字串       | `string`                                       |
-|            | 任意型別   | `any`                                          |
-| **集合型別** | 元組       | `tuple`                                        |
-|            | 清單       | `list`                                         |
-|            | 陣列       | `array`                                        |
-|            | 映射       | `map`                                          |
-| **函式型別** | 函式       | `fn<T>`                                        |
-| **進階型別** | 多選型別   | `union<T1, T2>`                                |
-|            | 指標       | `ptr<T>`                                       |
-|            | 選用型別   | `optional<T>`                                  |
+|            | 布林值     | `bool`                                   |
+|            | 字串       | `string`                                 |
+|            | 任意型別   | `any`                                    |
+| **集合型別** | 元組       | `tuple`                                  |
+|            | 清單       | `list`                                   |
+|            | 陣列       | `array`                                  |
+|            | 映射       | `map`                                    |
+| **函式型別** | 函式       | `fn<T>`                                  |
+| **進階型別** | 多選型別   | `union<T1, T2>`                          |
+|            | 指標       | `ptr<T>`                                 |
+|            | 選用型別   | `optional<T>`                            |
 
 ---
 
@@ -135,8 +135,7 @@ flag2 := !x
 - **string()**：將任何型別轉換為字串，方便輸出與除錯。
 - **sleep()**：暫停執行，用於併發與計時操作。
 - **len()**：計算集合型別（如 list、array、map、tuple）或字串的長度。
-- **copy()**：提供一個內置函式，用於對集合型別、結構體或其他複合型別進行深拷貝。  
-  深拷貝後，返回一個與原物件不共享記憶體的新物件。
+- **copy()**：對集合型別、結構體或其他複合型別進行深拷貝，返回一個與原物件不共享記憶體的新物件。
 
 ### 3.2 `print()` 與 `println()`
 - **`print()`**：輸出字串但不換行。
@@ -152,11 +151,11 @@ print(`Hello, ${name}. You are ${age} years old.`)  // 不換行
 println(`你的年齡是 ${age}.`)  // 換行輸出
 
 nums := [1, 2, 3]
-println("List:", nums)  // 自動轉換為 "[1, 2, 3]"
+println("List:", nums)  // 輸出 "[1, 2, 3]"
 ```
 
 #### 3.3 字串處理
-- **字串串接**：支援使用 `+` 運算子串接多個字串。  
+- **字串串接**：使用 `+` 運算子串接多個字串。  
   **範例：**
   ```rust
   greeting := "Hello, " + "World!"
@@ -191,10 +190,10 @@ struct User {
 Glux 支援 **函式（Function）**、**匿名函式（Lambda）** 以及 **閉包（Closure）**，並提供靜態語言的高效與靈活性，使函式成為 **一級公民（First-Class Citizen）**。
 
 ### 5.1 基本函式語法
-- **函式使用 `fn` 宣告**，回傳型別使用 `->` 指定。
-- **可選回傳型別**，若省略則根據 `return` 自動推導。
-- **支援預設參數**，允許部分參數有預設值。
-- **函式可作為變數、參數與回傳值**。
+- 使用 `fn` 宣告函式，回傳型別使用 `->` 指定。
+- 可選回傳型別，若省略則根據 `return` 自動推導。
+- 支援預設參數，允許部分參數有預設值。
+- 函式可作為變數、參數與回傳值。
 
 #### 範例
 ```rust
@@ -208,9 +207,8 @@ println(add(2, 3))  // 輸出 5
 ---
 
 ### 5.2 匿名函式（Lambda）
-Glux 支援 **匿名函式**，但不使用箭頭函式，而是採用標準函式語法：
-- **使用 `fn` 宣告匿名函式**，並可直接賦值給變數。
-- **可作為參數傳遞至其他函式**。
+- 使用 `fn` 宣告匿名函式，並可直接賦值給變數。
+- 可作為參數傳遞至其他函式。
 
 #### 範例
 ```rust
@@ -229,14 +227,14 @@ fn apply_twice(f: fn(int) -> int, x: int) -> int {
 
 println(apply_twice(fn(x: int) -> int {
     return x + 3
-}, 5))  // 輸出 11 ((5+3)+3)
+}, 5))  // 輸出 11
 ```
 
 ---
 
 ### 5.3 閉包（Closure）
-- **函式可捕獲外部變數**，形成 **閉包**。
-- **變數可讀取與修改**，與 Rust 類似。
+- 閉包可捕獲外部變數，形成閉包。
+- 允許讀取與修改外部變數（類似 Rust）。
 
 #### 範例
 ```rust
@@ -256,7 +254,7 @@ println(triple(5))  // 輸出 15
 ---
 
 ### 5.4 函式作為回傳值
-函式可以作為 **回傳值**，允許動態生成新函式。
+- 函式可作為回傳值，允許動態生成新函式。
 
 #### 範例
 ```rust
@@ -279,8 +277,8 @@ println(op(3, 5))  // 輸出 8
 ---
 
 ### 5.5 變數捕獲（Capturing）
-- **閉包可讀取與修改外部變數**。
-- **若閉包在函式返回後仍存活，則變數將存於堆區（Heap）**。
+- 閉包可讀取與修改外部變數。
+- 若閉包在函式返回後仍存活，則捕獲的變數將存於堆區。
 
 #### 範例
 ```rust
@@ -300,11 +298,11 @@ println(next())  // 輸出 2
 ---
 
 ### 5.6 高階函式（Higher-Order Function）
-Glux **支援函式作為參數**，允許更簡潔的高階函式（HOF）。
+- 支援函式作為參數，方便實現高階函式。
 
 #### 範例
 ```rust
-fn map(lst: list<int>, f: fn(int) -> int) -> list<int> {
+fn map(lst: list, f: fn(int) -> int) -> list {
     result := []
     for x in lst {
         result.append(f(x))
@@ -316,6 +314,39 @@ println(map([1, 2, 3, 4], fn(x: int) -> int {
     return x * x
 }))  // 輸出 [1, 4, 9, 16]
 ```
+
+---
+
+### 5.7 函數回傳型別與多值
+- **多值回傳**：函數可透過 tuple 同時返回多個值，所有回傳值均存在於一個 tuple 中。
+  
+  **範例：**
+  ```rust
+  fn divide_and_remainder(a: int, b: int) -> (int, int) {
+      quotient := a / b
+      remainder := a % b
+      return (quotient, remainder)
+  }
+  
+  q, r := divide_and_remainder(10, 3)
+  println(`商: ${q}, 餘數: ${r}`)  // 輸出 "商: 3, 餘數: 1"
+  ```
+  
+- **錯誤處理與替代型別**：若函數回傳結果可能屬於多種型別中的一種，則可使用 union<T1, T2> 表示。例如，用於錯誤處理時，可以定義類似 Rust 的 Result<T, E>：
+  ```rust
+  fn try_parse_int(s: string) -> union<int, string> {
+      if s == "42" {
+          return 42
+      } else {
+          return "無法解析為整數"
+      }
+  }
+  
+  result := try_parse_int("42")
+  // 接下來需要使用模式匹配或類似機制來處理 union 型別
+  ```
+  
+這樣的設計能夠靈活而精確地描述函數的回傳結構，既能同時返回多個值，也能表示成功與錯誤的替代結果。
 
 ---
 
