更新函數回傳型別與多值回傳的說明，新增錯誤處理與替代型別的範例，並簡化相關內容

--- a/語言規範.md
+++ b/語言規範.md
@@ -318,6 +318,7 @@ println(map([1, 2, 3, 4], fn(x: int) -> int {
 ---
 
 ### 5.7 函數回傳型別與多值
+
 - **多值回傳**：函數可透過 tuple 同時返回多個值，所有回傳值均存在於一個 tuple 中。
   
   **範例：**
@@ -332,21 +333,26 @@ println(map([1, 2, 3, 4], fn(x: int) -> int {
   println(`商: ${q}, 餘數: ${r}`)  // 輸出 "商: 3, 餘數: 1"
   ```
   
-- **錯誤處理與替代型別**：若函數回傳結果可能屬於多種型別中的一種，則可使用 union<T1, T2> 表示。例如，用於錯誤處理時，可以定義類似 Rust 的 Result<T, E>：
+- **錯誤處理與替代型別**：若函數回傳結果可能屬於成功型別 T 或錯誤型別 E（此處錯誤型別為內置錯誤型別 error），則可使用 union<T, error> 表示。為了簡化錯誤檢查，Glux 提供了內置函式 **is_error()**。使用者可直接利用 is_error() 快速判斷函數是否發生錯誤，當結果為非錯誤時，該 union 值可直接視為 T 使用，無需額外 unwrap()。
+
+  **範例：**
   ```rust
-  fn try_parse_int(s: string) -> union<int, string> {
+  fn try_parse_int(s: string) -> union<int, error> {
       if s == "42" {
           return 42
       } else {
-          return "無法解析為整數"
+          return error("無法解析為整數")
       }
   }
   
-  result := try_parse_int("42")
-  // 接下來需要使用模式匹配或類似機制來處理 union 型別
+  result := try_parse_int("123")
+  if is_error(result) {
+      println("解析錯誤")
+  } else {
+      // 直接使用 result 作為 int
+      println(`成功解析: ${result}`)
+  }
   ```
-  
-這樣的設計能夠靈活而精確地描述函數的回傳結構，既能同時返回多個值，也能表示成功與錯誤的替代結果。
 
 ---
 
