新增內置錯誤型別與函式，更新型別系統文檔，強化錯誤處理與深拷貝功能說明

--- a/語言規範.md
+++ b/語言規範.md
@@ -43,6 +43,9 @@ const PI = 3.1415  // 常數
   - **float64**：64 位 IEEE 754 浮點數，精度約 15 位有效數字  
     當數值較大或需要更高精度時，自動推導為 float64.
   
+- **內置錯誤型別 error**  
+  Glux 內置一個錯誤型別 **error**，用於表示錯誤狀態與錯誤訊息，通常與 union 搭配使用來實現錯誤處理。
+
 - **集合型別支援異質性**  
   集合型別（如 tuple、list、array、map）不需要指定內部元素型別，允許同時存放不同型別的值。
 - **內建函式 `string()`**  
@@ -63,21 +66,22 @@ mixedList := [10, "hello", 3.14]  // list 可包含不同型別
 
 附上型別系統的總結表：
 
-| 分類       | 型別       | 說明                                     |
-|------------|------------|------------------------------------------|
-| **基本型別** | 整數       | `int`（自動調整至 int8、int16、int32、int64；預設使用最小型別）   |
-|            | 浮點數     | `float`（自動調整至 float32 或 float64；預設使用最小型別）         |
-|            | 布林值     | `bool`                                   |
-|            | 字串       | `string`                                 |
-|            | 任意型別   | `any`                                    |
-| **集合型別** | 元組       | `tuple`                                  |
-|            | 清單       | `list`                                   |
-|            | 陣列       | `array`                                  |
-|            | 映射       | `map`                                    |
-| **函式型別** | 函式       | `fn<T>`                                  |
-| **進階型別** | 多選型別   | `union<T1, T2>`                          |
-|            | 指標       | `ptr<T>`                                 |
-|            | 選用型別   | `optional<T>`                            |
+| 分類       | 型別         | 說明                                                     |
+|------------|--------------|----------------------------------------------------------|
+| **基本型別** | 整數         | `int`（自動調整至 int8、int16、int32、int64；預設使用最小型別）       |
+|            | 浮點數       | `float`（自動調整至 float32 或 float64；預設使用最小型別）             |
+|            | 布林值       | `bool`                                                 |
+|            | 字串         | `string`                                               |
+|            | 任意型別     | `any`                                                  |
+|            | 錯誤         | `error`（內置錯誤型別，用於表示錯誤狀態與訊息）                     |
+| **集合型別** | 元組         | `tuple`                                                |
+|            | 清單         | `list`                                                 |
+|            | 陣列         | `array`                                                |
+|            | 映射         | `map`                                                  |
+| **函式型別** | 函式         | `fn<T>`                                                |
+| **進階型別** | 多選型別     | `union<T1, T2>`                                        |
+|            | 指標         | `ptr<T>`                                               |
+|            | 選用型別     | `optional<T>`                                          |
 
 ---
 
@@ -136,6 +140,7 @@ flag2 := !x
 - **sleep()**：暫停執行，用於併發與計時操作。
 - **len()**：計算集合型別（如 list、array、map、tuple）或字串的長度。
 - **copy()**：對集合型別、結構體或其他複合型別進行深拷貝，返回一個與原物件不共享記憶體的新物件。
+- **error()**：內置函式，用於生成一個 error 型別的錯誤物件。通常接受一個錯誤訊息字串作為參數。
 
 ### 3.2 `print()` 與 `println()`
 - **`print()`**：輸出字串但不換行。
@@ -318,7 +323,6 @@ println(map([1, 2, 3, 4], fn(x: int) -> int {
 ---
 
 ### 5.7 函數回傳型別與多值
-
 - **多值回傳**：函數可透過 tuple 同時返回多個值，所有回傳值均存在於一個 tuple 中。
   
   **範例：**
@@ -508,3 +512,49 @@ printReader(fileReader)  // 輸出 "檔案內容"
 ```
 
 ---
+
+## 10. 內置函式：copy() 與 error()
+
+- **copy()**：提供一個內置函式，用於對集合型別、結構體或其他複合型別進行深拷貝。  
+  拷貝後返回一個與原物件不共享記憶體的新物件。
+
+  **範例：**
+  ```rust
+  originalList := [1, 2, 3]
+  copiedList := copy(originalList)
+  copiedList.append(4)
+  println(originalList)  // 輸出 [1, 2, 3]
+  println(copiedList)    // 輸出 [1, 2, 3, 4]
+  ```
+
+- **error()**：內置函式，用於生成一個 error 型別的錯誤物件。  
+  通常接受一個錯誤訊息字串作為參數，以便在函數中返回錯誤狀態時使用。
+
+  **範例：**
+  ```rust
+  fn try_parse_int(s: string) -> union<int, error> {
+      if s == "42" {
+          return 42
+      } else {
+          return error("無法解析為整數")
+      }
+  }
+  ```
+
+---
+
+## 11. 語言特性總結
+✅ **簡單直覺，語法比 Go / Rust 更簡潔**  
+✅ **支援 `0 < x < 8` 連續比較運算**  
+✅ **`print()` 與 `println()` 分離，符合直覺**  
+✅ **併發比 Go 更靈活，允許 `await` 多個任務**  
+✅ **比 C / Go 更節省記憶體（數值型別自動擴展至 int64/float64，預設使用最小型別）**  
+✅ **集合型別支援異質性，不需指定內部元素型別（如 list 而非 list<int>）**  
+✅ **值與引用傳遞依據型別特性，自動選擇最合適的傳遞方式**  
+✅ **內置 copy() 支援深拷貝**  
+✅ **支援 struct 與 interface，實現隱式介面實作**  
+✅ **函數回傳型別可利用 tuple 與 union 進行多值回傳與錯誤處理**  
+✅ **內置 error 型別與 error() 函式用於錯誤處理，並配合 is_error() 進行快速檢查**  
+✅ **比 Python 更快，比 Go 更靈活，比 Rust 更易學**  
+
+這是一門 **高效能、易學、支援併發** 的語言，適用於系統開發、後端服務、資料處理等領域。 🚀
