--- a/語言規範.md
+++ b/語言規範.md
@@ -35,7 +35,7 @@ const PI = 3.1415  // 常數
   - **int32**：範圍 -2,147,483,648 ~ 2,147,483,647  
     例：`z := 2_000_000_000`（自動推導為 int32）
   - **int64**：範圍 -9,223,372,036,854,775,808 ~ 9,223,372,036,854,775,807  
-    若數值超出 int32 範圍，且在 int64 內則自動推導為 int64.
+    若數值超出 int32 範圍且在 int64 內，則自動推導為 int64.
   
   #### 浮點數 (float)
   - **float32**：32 位 IEEE 754 浮點數，精度約 7 位有效數字  
@@ -45,9 +45,12 @@ const PI = 3.1415  // 常數
   
 - **內置錯誤型別 error**  
   Glux 內置一個錯誤型別 **error**，用於表示錯誤狀態與錯誤訊息，通常與 union 搭配使用來實現錯誤處理。
-
+  
 - **集合型別支援異質性**  
-  集合型別（如 tuple、list、array、map）不需要指定內部元素型別，允許同時存放不同型別的值。
+  集合型別（如 tuple、list、array、map）不需要指定內部元素型別，允許同時存放不同型別的值。例如：
+  ```rust
+  mixedList := [10, "hello", 3.14]  // list 可包含不同型別
+  ```
 - **內建函式 `string()`**  
   可轉換任何型別為字串（此為內置函式之一，與 `sleep()`、`len()` 同級）。
 
@@ -60,8 +63,6 @@ bigNum := 10_000_000_000  // 超出 int32，自動推導為 int64
 
 pi32 := 3.14    // 推導為 float32
 largeFloat := 3.141592653589793  // 推導為 float64
-
-mixedList := [10, "hello", 3.14]  // list 可包含不同型別
 ```
 
 附上型別系統的總結表：
@@ -140,7 +141,7 @@ flag2 := !x
 - **sleep()**：暫停執行，用於併發與計時操作。
 - **len()**：計算集合型別（如 list、array、map、tuple）或字串的長度。
 - **copy()**：對集合型別、結構體或其他複合型別進行深拷貝，返回一個與原物件不共享記憶體的新物件。
-- **error()**：內置函式，用於生成一個 error 型別的錯誤物件。通常接受一個錯誤訊息字串作為參數。
+- **error()**：生成一個 error 型別的錯誤物件，通常接受一個錯誤訊息字串作為參數。
 
 ### 3.2 `print()` 與 `println()`
 - **`print()`**：輸出字串但不換行。
@@ -323,9 +324,7 @@ println(map([1, 2, 3, 4], fn(x: int) -> int {
 ---
 
 ### 5.7 函數回傳型別與多值
-- **多值回傳**：函數可透過 tuple 同時返回多個值，所有回傳值均存在於一個 tuple 中。
-  
-  **範例：**
+- **多值回傳**：函數可透過 tuple 同時返回多個值，所有回傳值均存在於一個 tuple 中。例如：
   ```rust
   fn divide_and_remainder(a: int, b: int) -> (int, int) {
       quotient := a / b
@@ -337,26 +336,29 @@ println(map([1, 2, 3, 4], fn(x: int) -> int {
   println(`商: ${q}, 餘數: ${r}`)  // 輸出 "商: 3, 餘數: 1"
   ```
   
-- **錯誤處理與替代型別**：若函數回傳結果可能屬於成功型別 T 或錯誤型別 E（此處錯誤型別為內置錯誤型別 error），則可使用 union<T, error> 表示。為了簡化錯誤檢查，Glux 提供了內置函式 **is_error()**。使用者可直接利用 is_error() 快速判斷函數是否發生錯誤，當結果為非錯誤時，該 union 值可直接視為 T 使用，無需額外 unwrap()。
-
-  **範例：**
+- **錯誤處理與替代型別**：若函數回傳結果可能屬於成功型別 T 或錯誤型別 E（此處錯誤型別為內置 error），則可使用 union<T, error> 表示。例如，若要回傳多個值且可能出錯，可這樣定義：
   ```rust
-  fn try_parse_int(s: string) -> union<int, error> {
+  fn try_parse_division(s: string) -> union<(int, string), error> {
+      // 此處回傳一個 tuple，其第一個元素為 int，第二個元素為 string
       if s == "42" {
-          return 42
+          return (42, "成功")
       } else {
-          return error("無法解析為整數")
+          return error("無法解析")
       }
   }
+  ```
   
-  result := try_parse_int("123")
+  為了簡化錯誤檢查，Glux 提供內置函式 **is_error()**。使用者可直接利用 is_error() 快速判斷函數是否發生錯誤，當結果非錯誤時，union 值可直接視為 T 使用，無需額外 unwrap()：
+  ```rust
+  result := try_parse_int("123")  // 定義為 union<int, error>
   if is_error(result) {
       println("解析錯誤")
   } else {
-      // 直接使用 result 作為 int
-      println(`成功解析: ${result}`)
+      println(`成功解析: ${result}`)  // 直接使用 result 作為 int
   }
   ```
+  
+  為保持與單獨 tuple 回傳寫法一致，若明確指定 tuple 型別，建議使用括號表示，如 union<(int, string), error>。
 
 ---
 
@@ -403,7 +405,7 @@ println(`結果: ${result}`)  // 輸出 "結果: 42"
 ---
 
 ### 7.2 `await` 多個函式
-當 `await` 用於 **多個函式** 時，回傳 **tuple**，且結果順序與函式順序相同。
+當 `await` 用於多個函式時，回傳一個 tuple，且結果順序與函式順序相同。
 
 #### 範例
 ```rust
@@ -446,7 +448,7 @@ if result is error {
 ---
 
 ### 7.4 `await` 用於迴圈
-當有 **多個併發函式** 需要逐一處理時，可使用 `for` 迭代 `await` 結果：
+當有多個併發函式需要逐一處理時，可使用 `for` 迭代 `await` 結果：
 
 #### 範例
 ```rust
@@ -457,16 +459,16 @@ for result in await tasks {
 }
 ```
 **行為解析**：
-- `await tasks` 會 **同時等待所有函式** 執行完畢。
-- `for result in await tasks` **逐一處理每個結果**。
+- `await tasks` 同時等待所有函式執行完畢。
+- `for result in await tasks` 逐一處理每個結果。
 
 ---
 
 ## 8. 參數傳遞語意
 
-- **值傳遞**：對於基本型別（如 int、float、bool），預設採用值傳遞。這些型別佔用記憶體小，複製成本低。
-- **引用傳遞**：對於複合型別（如 string、list、array、map、tuple、struct 等），預設採用引用傳遞，以節省記憶體與提高效能。在函式呼叫中，傳遞的是物件的引用，而非整個複製品。
-- 若有需要，也可透過顯式語法指定使用值傳遞或引用傳遞，以滿足特殊需求。
+- **值傳遞**：對於基本型別（如 int、float、bool），預設採用值傳遞，因其佔用記憶體小且複製成本低。
+- **引用傳遞**：對於複合型別（如 string、list、array、map、tuple、struct 等），預設採用引用傳遞，以節省記憶體與提高效能；函式呼叫中傳遞的是物件的引用，而非整個複製品。
+- 若有需要，可透過顯式語法指定值傳遞或引用傳遞，以滿足特殊需求。
 
 ---
 
@@ -486,7 +488,7 @@ struct User {
 
 ### 9.2 Interface 介面
 - 使用 `interface` 關鍵字宣告介面，定義一組方法簽名。  
-- 任何型別只要實作了這些方法，即隱式實作該介面，無需額外聲明。
+- 任何型別只要實作這些方法，即隱式實作該介面，無需額外聲明。
 
 #### 範例
 ```rust
@@ -515,8 +517,7 @@ printReader(fileReader)  // 輸出 "檔案內容"
 
 ## 10. 內置函式：copy() 與 error()
 
-- **copy()**：提供一個內置函式，用於對集合型別、結構體或其他複合型別進行深拷貝。  
-  拷貝後返回一個與原物件不共享記憶體的新物件。
+- **copy()**：提供一個內置函式，用於對集合型別、結構體或其他複合型別進行深拷貝，返回一個與原物件不共享記憶體的新物件。
 
   **範例：**
   ```rust
@@ -527,8 +528,7 @@ printReader(fileReader)  // 輸出 "檔案內容"
   println(copiedList)    // 輸出 [1, 2, 3, 4]
   ```
 
-- **error()**：內置函式，用於生成一個 error 型別的錯誤物件。  
-  通常接受一個錯誤訊息字串作為參數，以便在函數中返回錯誤狀態時使用。
+- **error()**：內置函式，用於生成一個 error 型別的錯誤物件，通常接受一個錯誤訊息字串作為參數。
 
   **範例：**
   ```rust
@@ -554,7 +554,9 @@ printReader(fileReader)  // 輸出 "檔案內容"
 ✅ **內置 copy() 支援深拷貝**  
 ✅ **支援 struct 與 interface，實現隱式介面實作**  
 ✅ **函數回傳型別可利用 tuple 與 union 進行多值回傳與錯誤處理**  
-✅ **內置 error 型別與 error() 函式用於錯誤處理，並配合 is_error() 進行快速檢查**  
-✅ **比 Python 更快，比 Go 更靈活，比 Rust 更易學**  
+   - 使用 tuple 表示同時返回多個值（例如 `(int, int)`）。
+   - 使用 union 表示回傳結果可能是成功型別 T 或錯誤型別 error（例如 `union<(int, string), error>`），且函數回傳 union<T, error> 時，可利用內置 is_error() 快速檢查錯誤，正常情況下 union 值可直接當作 T 使用。
+✅ **內置 error 型別與 error() 函式用於錯誤處理**  
+✅ **比 Python 更快，比 Go 更靈活，比 Rust 更易學**
 
 這是一門 **高效能、易學、支援併發** 的語言，適用於系統開發、後端服務、資料處理等領域。 🚀
