更新型別系統文檔，修正語句流暢度，簡化錯誤處理與多值回傳的說明，新增指標操作與相關範例

--- a/語言規範.md
+++ b/語言規範.md
@@ -24,8 +24,7 @@ const PI = 3.1415  // 常數
 ### 1.2 型別系統
 
 - **自動調整數值型別**  
-  Glux 會根據整數或浮點數的數值範圍，自動選擇**能容納該數值的最小型別**。  
-  預設範圍如下：
+  Glux 會根據整數或浮點數的數值範圍，自動選擇**能容納該數值的最小型別**。
   
   #### 整數 (int)
   - **int8**：範圍 -128 ~ 127  
@@ -44,7 +43,7 @@ const PI = 3.1415  // 常數
     當數值較大或需要更高精度時，自動推導為 float64.
   
 - **內置錯誤型別 error**  
-  Glux 內置一個錯誤型別 **error**，用於表示錯誤狀態與錯誤訊息，通常與 union 搭配使用來實現錯誤處理。
+  Glux 內置錯誤型別 **error**，用於表示錯誤狀態與錯誤訊息，通常與 union 搭配使用實現錯誤處理。
   
 - **集合型別支援異質性**  
   集合型別（如 tuple、list、array、map）不需要指定內部元素型別，允許同時存放不同型別的值。例如：
@@ -67,22 +66,22 @@ largeFloat := 3.141592653589793  // 推導為 float64
 
 附上型別系統的總結表：
 
-| 分類       | 型別         | 說明                                                     |
-|------------|--------------|----------------------------------------------------------|
-| **基本型別** | 整數         | `int`（自動調整至 int8、int16、int32、int64；預設使用最小型別）       |
-|            | 浮點數       | `float`（自動調整至 float32 或 float64；預設使用最小型別）             |
-|            | 布林值       | `bool`                                                 |
-|            | 字串         | `string`                                               |
-|            | 任意型別     | `any`                                                  |
-|            | 錯誤         | `error`（內置錯誤型別，用於表示錯誤狀態與訊息）                     |
-| **集合型別** | 元組         | `tuple`                                                |
-|            | 清單         | `list`                                                 |
-|            | 陣列         | `array`                                                |
-|            | 映射         | `map`                                                  |
-| **函式型別** | 函式         | `fn<T>`                                                |
-| **進階型別** | 多選型別     | `union<T1, T2>`                                        |
-|            | 指標         | `ptr<T>`                                               |
-|            | 選用型別     | `optional<T>`                                          |
+| 分類         | 型別         | 說明                                                     |
+|--------------|--------------|----------------------------------------------------------|
+| **基本型別**   | 整數         | `int`（自動調整至 int8、int16、int32、int64；預設使用最小型別）       |
+|              | 浮點數       | `float`（自動調整至 float32 或 float64；預設使用最小型別）             |
+|              | 布林值       | `bool`                                                 |
+|              | 字串         | `string`                                               |
+|              | 任意型別     | `any`                                                  |
+|              | 錯誤         | `error`（內置錯誤型別，用於表示錯誤狀態與訊息）                     |
+| **集合型別**   | 元組         | `tuple`（值不能更改）                                                |
+|              | 清單         | `list`                                                 |
+|              | 陣列         | `array`                                                |
+|              | 映射         | `map`                                                  |
+| **函式型別**   | 函式         | `fn<T>`                                                |
+| **進階型別**   | 多選型別     | `union<T1, T2>`                                        |
+|              | 指標         | `ptr<T>`                                               |
+|              | 選用型別     | `optional<T>`                                          |
 
 ---
 
@@ -336,10 +335,10 @@ println(map([1, 2, 3, 4], fn(x: int) -> int {
   println(`商: ${q}, 餘數: ${r}`)  // 輸出 "商: 3, 餘數: 1"
   ```
   
-- **錯誤處理與替代型別**：若函數回傳結果可能屬於成功型別 T 或錯誤型別 E（此處錯誤型別為內置 error），則可使用 union<T, error> 表示。例如，若要回傳多個值且可能出錯，可這樣定義：
+- **錯誤處理與替代型別**：若函數回傳結果可能屬於成功型別 T 或錯誤型別 E（此處錯誤型別為內置 error），則可使用 union<T, error> 表示。例如，若要回傳多個值且可能出錯，可定義如下：
   ```rust
   fn try_parse_division(s: string) -> union<(int, string), error> {
-      // 此處回傳一個 tuple，其第一個元素為 int，第二個元素為 string
+      // 回傳一個 tuple，第一個元素為 int，第二個元素為 string
       if s == "42" {
           return (42, "成功")
       } else {
@@ -348,7 +347,9 @@ println(map([1, 2, 3, 4], fn(x: int) -> int {
   }
   ```
   
-  為了簡化錯誤檢查，Glux 提供內置函式 **is_error()**。使用者可直接利用 is_error() 快速判斷函數是否發生錯誤，當結果非錯誤時，union 值可直接視為 T 使用，無需額外 unwrap()：
+  為了簡化錯誤檢查，Glux 提供內置函式 **is_error()**。使用者可直接利用 is_error() 快速判斷函數是否發生錯誤；當結果非錯誤時，union 值可直接視為 T 使用，無需額外 unwrap()。
+  
+  **範例：**
   ```rust
   result := try_parse_int("123")  // 定義為 union<int, error>
   if is_error(result) {
@@ -467,8 +468,8 @@ for result in await tasks {
 ## 8. 參數傳遞語意
 
 - **值傳遞**：對於基本型別（如 int、float、bool），預設採用值傳遞，因其佔用記憶體小且複製成本低。
-- **引用傳遞**：對於複合型別（如 string、list、array、map、tuple、struct 等），預設採用引用傳遞，以節省記憶體與提高效能；函式呼叫中傳遞的是物件的引用，而非整個複製品。
-- 若有需要，可透過顯式語法指定值傳遞或引用傳遞，以滿足特殊需求。
+- **引用傳遞**：對於複合型別（如 string、list、array、map、tuple、struct 等），預設採用引用傳遞，以節省記憶體與提高效能；在函式呼叫中，傳遞的是物件的引用，而非整個複製品。
+- 若有需要，也可透過顯式語法指定使用值傳遞或引用傳遞，以滿足特殊需求。
 
 ---
 
@@ -543,7 +544,20 @@ printReader(fileReader)  // 輸出 "檔案內容"
 
 ---
 
-## 11. 語言特性總結
+## 11. 指標操作
+
+- Glux 支援在任何地方使用 `&` 取得變數的指標，並使用 `*` 解參考以取得指向的值。例如：
+  ```rust
+  x := 10
+  p := &x  // p 的型別為 ptr<int>
+  println(*p)  // 輸出 10
+  ```
+- **注意：** 所有指標運算（如 `+`、`-`、`<<`、`>>` 等）只能在 `unsafe { }` 區塊中進行，以確保安全性。
+- 當使用點運算子（`.`）存取 struct、array、list、tuple 等複合型別成員時，如果該成員為指標，Glux 會自動解參考，無需手動使用 `*`。
+
+---
+
+## 12. 語言特性總結
 ✅ **簡單直覺，語法比 Go / Rust 更簡潔**  
 ✅ **支援 `0 < x < 8` 連續比較運算**  
 ✅ **`print()` 與 `println()` 分離，符合直覺**  
@@ -555,8 +569,10 @@ printReader(fileReader)  // 輸出 "檔案內容"
 ✅ **支援 struct 與 interface，實現隱式介面實作**  
 ✅ **函數回傳型別可利用 tuple 與 union 進行多值回傳與錯誤處理**  
    - 使用 tuple 表示同時返回多個值（例如 `(int, int)`）。
-   - 使用 union 表示回傳結果可能是成功型別 T 或錯誤型別 error（例如 `union<(int, string), error>`），且函數回傳 union<T, error> 時，可利用內置 is_error() 快速檢查錯誤，正常情況下 union 值可直接當作 T 使用。
+   - 使用 union 表示回傳結果可能是成功型別 T 或錯誤型別 error（例如 `union<(int, string), error>`），並保持與單獨 tuple 回傳寫法一致。
+   - 內置函式 **is_error()** 用於快速檢查 union<T, error> 的錯誤狀態，當結果正常時可直接使用。
 ✅ **內置 error 型別與 error() 函式用於錯誤處理**  
+✅ **指標操作在任何地方可取指與解參考，但所有指標運算必須在 unsafe 區塊中進行；點運算子會自動解指標**  
 ✅ **比 Python 更快，比 Go 更靈活，比 Rust 更易學**
 
 這是一門 **高效能、易學、支援併發** 的語言，適用於系統開發、後端服務、資料處理等領域。 🚀
