修正集合型別說明中的語法，新增反引號以提高可讀性

--- a/語言規範.md
+++ b/語言規範.md
@@ -563,7 +563,7 @@ printReader(fileReader)  // 輸出 "檔案內容"
 ✅ **`print()` 與 `println()` 分離，符合直覺**  
 ✅ **併發比 Go 更靈活，允許 `await` 多個任務**  
 ✅ **比 C / Go 更節省記憶體（數值型別自動擴展至 int64/float64，預設使用最小型別）**  
-✅ **集合型別支援異質性，不需指定內部元素型別（如 list 而非 list<int>）**  
+✅ **集合型別支援異質性，不需指定內部元素型別（如 `list` 而非 `list<int>`）**  
 ✅ **值與引用傳遞依據型別特性，自動選擇最合適的傳遞方式**  
 ✅ **內置 copy() 支援深拷貝**  
 ✅ **支援 struct 與 interface，實現隱式介面實作**  
